modified server/Dockerfile and renamed server/index.js > server/app/index.js

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,12 @@
-FROM aexea/nodejs-base
-EXPOSE 8080
-CMD [ "nodejs", "agrorun" ]
+FROM nodejs:latest
+
+WORKDIR /app
+
+COPY package.json .
+COPY package-lock.json .
+
+RUN npm ci
+
+ENV FASTIFY_ADDRESS 0.0.0.0
+
+CMD [ "npm", "start" ]
