--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "server",
+  "name": "agroserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IsFarkhod/AgroscoutServer.git"
+  },
+  "author": "Islamov Farkhod",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -22,5 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/IsFarkhod/AgroscoutServer/issues"
+  },
+  "homepage": "https://github.com/IsFarkhod/AgroscoutServer#readme"
 }
