--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '1.0'
 services:
   server:
-    build: server
+    build: app
     container_name: api-backend
     ports: 
       - '8080:8080'
